# deadass_im_making_a_new_folder

./: .gitignore  CMakeLists.txt
include/: block.cpp  block.h  enums.h  game.h  player.h  tile.h  waiter.h
src/: CMakeCache.txt  block.cpp  game.cpp  main.cpp  player.cpp  tile.cpp
